:lipstick: mainly fixed spacing problems
also added some media queries and fixed the thecrether-web post

--- a/components/Intro/intro.module.scss
+++ b/components/Intro/intro.module.scss
@@ -6,6 +6,7 @@
   // padding: 30px 0;
   width: 100%;
   margin-top: $notScrolled;
+  height: 4 * $notScrolled;
 
   & > div {
     background: linear-gradient(
@@ -39,7 +40,7 @@
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 48em) {
   .intro > div {
     flex-direction: column;
     align-items: center;
@@ -47,7 +48,6 @@
 
     h1 {
       margin: 0;
-      width: 100%;
       text-align: center;
     }
   }
