--- a/components/Layout/layout.module.scss
+++ b/components/Layout/layout.module.scss
@@ -24,8 +24,8 @@
   padding: 0;
 }
 
-@media screen and (max-width: 900px) {
-  .main {
-    padding: $homeMargin * 4 1em 0 1em;
-  }
-}
+// @media screen and (max-width: 900px) {
+//   .main {
+//     padding: $homeMargin * 4 1em 0 1em;
+//   }
+// }
