--- a/pages/projects/post.module.scss
+++ b/pages/projects/post.module.scss
@@ -34,6 +34,7 @@ $skewDeg: -3deg;
     background: inherit;
     z-index: 1;
     align-items: flex-start;
+    border: 1px solid transparentize($color: $color, $amount: 0.5);
 
     & > div {
       transform: skewY(-$skewDeg) rotate($skewDeg);
@@ -43,10 +44,10 @@ $skewDeg: -3deg;
 
     .properties {
       flex-wrap: wrap;
-      justify-content: flex-start;
+      justify-content: center;
       width: 100%;
       & > * {
-        width: 33%;
+        margin: 10px 25px;
       }
     }
 
